border and font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
   </head>
 
   <body>
-    <h1>test</h1>
+    <h1>This is my graph</h1>
+    <h2>And this is a subheading</h2>
+    <p>here's one paragraph</p>
+
+    <div id="apple-stock-container" class="chart-container">
+      <h2> apple is doing freaking awesome right now</h2>
+
+    </div>
+
+    <p> and here's another paragraph I want under my graph</p>
+
+
     <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="scripts/chart.js"></script>
 
